# aether

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  clippy.json  clippy.toml  dist.json  doc.json  fmt.json  qodana.json  qodana.sarif.json  qodana.yaml  test.json
crates/aether-actor/: Cargo.toml
crates/aether-actor-derive/: Cargo.toml
crates/aether-actor-derive/src/: lib.rs
crates/aether-actor-derive/tests/: derive.rs  native_actor.rs  ui.rs
crates/aether-actor/examples/: caller.rs  echoer.rs  handle_demo.rs  hello.rs  input_logger.rs  postcard_echoer.rs  save_counter.rs
crates/aether-actor/src/: actor.rs  cost.rs  ctx.rs  handle.rs  lib.rs  local.rs  log.rs  mail.rs  sender.rs  sink.rs  sync.rs  text.rs  trace_ring.rs  transport.rs  wasm.rs
crates/aether-actor/src/actor/: mod.rs  sender.rs  (+1 more)
crates/aether-actor/tests/: handlers_manifest.rs  state_framing_roundtrip.rs
crates/aether-camera/: Cargo.toml
crates/aether-camera-component/: Cargo.toml
crates/aether-camera-component/examples/: topdown.rs
crates/aether-camera-component/src/: lib.rs
crates/aether-camera-component/tests/: scenario.rs
crates/aether-camera/src/: lib.rs  runtime.rs
crates/aether-camera/tests/: scenario.rs
crates/aether-capabilities/: Cargo.toml
crates/aether-capabilities/src/: audio.rs  broadcast.rs  component.rs  config_env.rs  control.rs  corridor.rs  counterfactual.rs  dag.rs  fs.rs  handle.rs  http.rs  http_server.rs  input.rs  inventory.rs  io.rs  lib.rs  lifecycle.rs  log.rs  name_inventory.rs  net.rs  nfs.rs  reachability.rs  reachability_baselines.rs  render.rs  store.rs  test_bench.rs  test_chassis.rs  text.rs  trace.rs  trace_walk.rs  traffic.rs  trajectory.rs  trampoline.rs  transforms.rs  ui.rs  wasm_trampoline.rs  window.rs
crates/aether-capabilities/tests/: embeddable_resolution.rs  log_pool_stress.rs
crates/aether-codec/: Cargo.toml
crates/aether-codec/src/: cast.rs  conformance.rs  decode.rs  encode.rs  frame.rs  lib.rs  proptest_roundtrip.rs  test_fixtures.rs
crates/aether-component/: Cargo.toml
crates/aether-component/examples/: caller.rs  echoer.rs  handle_demo.rs  hello.rs  input_logger.rs  postcard_echoer.rs  save_counter.rs
crates/aether-component/src/: handle.rs  io.rs  kinds.rs  lib.rs  log.rs  net.rs  raw.rs  sync.rs
crates/aether-component/tests/: handlers_manifest.rs
crates/aether-data/: Cargo.toml
crates/aether-data-derive/: Cargo.toml
crates/aether-data-derive/src/: lib.rs
crates/aether-data-derive/tests/: derive.rs  native_actor.rs  transform.rs
crates/aether-data/src/: actor.rs  hash.rs  ids.rs  lib.rs  mail.rs  name_inventory.rs  schema.rs  tag_bits.rs  tagged_id.rs  transform.rs  wire_id.rs
crates/aether-data/tests/: content_addressed_handles.rs
crates/aether-derive/: Cargo.toml
crates/aether-derive/src/: config.rs  lib.rs
crates/aether-derive/tests/: expand.rs
crates/aether-dsl-mesh/: Cargo.toml
crates/aether-dsl-mesh/examples/: dsl_to_obj.rs
crates/aether-dsl-mesh/src/: ast.rs  csg.rs  debug.rs  lib.rs  mesh.rs  obj.rs  parse.rs  polygon.rs  serialize.rs  simplify.rs
crates/aether-dsl-mesh/tests/: csg_bsp_probe.rs  csg_integration.rs  csg_matrix.rs  csg_scaffolding.rs  csg_sphere_provenance.rs  mesh_box.rs  mesh_lathe.rs  mesh_v1_remaining.rs  mesh_v2.rs  regression.rs  round_trip.rs
crates/aether-hello-component/: Cargo.toml
crates/aether-hello-component/src/: lib.rs
crates/aether-hub/: Cargo.toml
crates/aether-hub-protocol/: Cargo.toml
crates/aether-hub-protocol/src/: canonical.rs  lib.rs  tag_bits.rs  types.rs
crates/aether-hub/src/: chassis.rs  decoder.rs  encoder.rs  engine.rs  lib.rs  log_store.rs  loopback.rs  main.rs  mcp.rs  registry.rs  session.rs  spawn.rs
crates/aether-hub/tests/: engine_handshake.rs  engine_logs.rs
crates/aether-kinds/: Cargo.toml
crates/aether-kinds/src/: audio.rs  dag.rs  descriptors.rs  handle.rs  io.rs  keycode.rs  lib.rs  log.rs  mailboxes.rs  net.rs  text_metrics.rs  trace.rs
crates/aether-kinds/tests/: dag_bundle_roundtrip.rs  dag_descriptor_roundtrip.rs  dag_descriptor_with_call_node.rs  dag_descriptor_with_transform_node.rs  dag_error_variant_roundtrip.rs
crates/aether-kit/: Cargo.toml
crates/aether-kit/src/: arena.rs  camera.rs  lib.rs  runtime.rs
crates/aether-kit/tests/: camera_scenario.rs
crates/aether-labyrinth/: Cargo.toml
crates/aether-labyrinth/src/: corridor.rs  counterfactual.rs  escapability.rs  kinds.rs  lib.rs  reachability.rs  reachability_baselines.rs  test_chassis.rs  test_support.rs  traffic.rs  trajectory.rs  transforms.rs
crates/aether-mail/: Cargo.toml
crates/aether-mail-derive/: Cargo.toml
crates/aether-mail-derive/src/: lib.rs  manifest.rs
crates/aether-mail-derive/tests/: derive.rs
crates/aether-mail/src/: ids.rs  lib.rs  mailboxes.rs  tagged_id.rs
crates/aether-math/: Cargo.toml
crates/aether-math/src/: aabb.rs  lib.rs  mat.rs  quat.rs  test_helpers.rs  vec.rs
crates/aether-mcp/: Cargo.toml
crates/aether-mcp/src/: args.rs  main.rs  reverse.rs  rpc.rs  test_chassis.rs  tools.rs
crates/aether-mesh-editor-component/: Cargo.toml
crates/aether-mesh-editor-component/src/: lib.rs
crates/aether-mesh-viewer/: Cargo.toml
crates/aether-mesh-viewer-component/: Cargo.toml
crates/aether-mesh-viewer-component/src/: lib.rs
crates/aether-mesh-viewer-component/tests/: scenario.rs
crates/aether-mesh-viewer/src/: lib.rs  runtime.rs
crates/aether-mesh-viewer/tests/: scenario.rs
crates/aether-params-codec/: Cargo.toml
crates/aether-params-codec/src/: decode.rs  lib.rs
crates/aether-rpc/: Cargo.toml
crates/aether-rpc/src/: lib.rs  rpc.rs  trace_walk.rs
crates/aether-save-counter-component/: Cargo.toml
crates/aether-save-counter-component/src/: lib.rs
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/decode_schema/: seed-00  seed-01  seed-03  seed-04  seed-05  seed-06
fuzz/fuzz_targets/: decode_schema.rs  wire_decode_enum.rs  wire_decode_seq.rs  wire_decode_str.rs  wire_roundtrip.rs
fuzz/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: inventory.rs  main.rs
(+1162 files in other folders)
