[workspace]
resolver = "3"
members = [
    "crates/aether-substrate",
    "crates/aether-substrate-bundle",
    "crates/aether-codec",
    "crates/aether-data",
    "crates/aether-kinds",
    "crates/aether-math",
    "crates/aether-actor",
    "crates/aether-actor-derive",
    "crates/aether-data-derive",
    "crates/aether-derive",
    "crates/aether-mesh",
    "crates/aether-camera",
    "crates/aether-capabilities",
    "crates/aether-mcp",
    "crates/aether-mesh-viewer",
    "crates/aether-test-fixtures",
    "demos/sokoban",
    "xtask",
]
# Reference artefacts under spikes/ are standalone Cargo workspaces
# (see ADR-0003 §Consequences) and must be excluded so they aren't
# auto-absorbed into this workspace via the parent-walk. Explicit
# listing (rather than a `spikes/*` glob) because Qodana's TOML
# inspector can't resolve workspace globs and flags them as
# unresolved file references.
exclude = [
    "spikes/aether-mail-spike-guest",
    "spikes/aether-mail-spike-host",
    "spikes/prompt-pipeline-spike",
    "spikes/recruit-k-sim",
]

[workspace.package]
version = "0.3.0-alpha"
edition = "2024"

[workspace.dependencies]
# Chassis-binary argv parsing (ADR-0090 unit d, issue 1258). One
# consumer today (`aether-substrate-bundle`); workspaced so future CLI
# surfaces reach for the same major.
clap = { version = "4", features = ["derive"] }

[workspace.lints.rust]
# Phase 5 of iamacoffeepot/aether#913 swept ~244 RsUnnecessaryQualifications
# findings across the workspace. Enabling rustc's matching lint here at
# `warn` prevents reintroduction — CI's `cargo clippy -- -D warnings`
# escalates it to a hard fail on any new qualified path that the
# compiler can elide (e.g. `core::mem::size_of` when the edition-2024
# prelude has `size_of` in scope).
unused_qualifications = "warn"

[workspace.lints.rustdoc]
# Phase 5 / 5c of iamacoffeepot/aether#913 doc-comment cleanup.
# `redundant_explicit_links` flags `[`Foo`](crate::path::to::Foo)`
# when the bracket label already resolves to the same target via
# intra-doc-link lookup. `broken_intra_doc_links` catches dangling
# `[Foo]` after a rename. `private_intra_doc_links` catches public
# docs pointing at private items. CI's `Docs` job (`cargo doc
# --workspace --no-deps` under `RUSTDOCFLAGS='-D rustdoc::...'`)
# escalates these to hard failures; `warn` here keeps local
# `cargo doc` usable for developers without forcing -D on every
# dev run.
redundant_explicit_links = "warn"
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"

[workspace.lints.clippy]
# Baseline — both groups as warn, then opt out of the idiom-fight bucket below.
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }

# Deny picks — INITIALLY AT WARN until per-pick cleanup PRs land (iamacoffeepot/aether#854 Phase 1.b-1.c.iv).
# Each follow-up PR fixes its hits and promotes its lint to deny in the same diff.
dbg_macro                           = "warn"  # promote to deny in Phase 1.c.* if any hits exist
todo                                = "warn"  # promote to deny if no hits surface
unimplemented                       = "warn"  # promote to deny if no hits surface
undocumented_unsafe_blocks          = "deny"
cloned_instead_of_copied            = "deny"
large_stack_arrays                  = "deny"
match_wildcard_for_single_variants  = "deny"
uninlined_format_args               = "deny"
unreadable_literal                  = "deny"

# Warn picks — cherry-picked from restriction + style (not covered by pedantic/nursery baseline).
unwrap_used                         = "warn"
print_stdout                        = "warn"
print_stderr                        = "warn"
# absolute_paths — catches `crate::a::b::c::Thing` written inline at call sites
# when a `use` would shorten it. See iamacoffeepot/aether#951. Starts at `warn`;
# promotion to `deny` is a follow-up phase once any reintroduced hits stay green.
# Default `absolute-paths-max-segments = 2` is sufficient — no override in clippy.toml.
absolute_paths                      = "warn"

# Disable — idiom fight / dispatcher contract / doc-burden. Rationale in iamacoffeepot/aether#854.
float_cmp                    = "allow"
missing_const_for_fn         = "allow"
missing_errors_doc           = "allow"
needless_pass_by_ref_mut     = "allow"
too_long_first_doc_paragraph = "allow"
