[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
cargo_metadata = "0.23.1"
clap = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }

[lints]
workspace = true
