[package]
name = "aether-actor-derive"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
aether-data = { path = "../aether-data", features = ["derive"] }
bytemuck = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive", "std"] }
inventory = { workspace = true }
aether-actor = { path = "../aether-actor" }

[lints]
workspace = true
