[package]
name = "aether-actor"
version.workspace = true
edition.workspace = true
license.workspace = true

# Actor SDK shared by WASM components (via `wasm::WasmTransport` —
# folded in from the prior `aether-component` crate by issue 552 stage
# 0) and, eventually, native capabilities (via
# `aether-substrate::NativeBinding`). Holds the `MailTransport`
# trait, the typed mail/ctx/sink machinery generic over `T:
# MailTransport`, and the wasm-guest impl
# (`WasmTransport`, `WasmActor`, `Replaceable`, `export!` macro plus
# the `aether.kinds.inputs` / `aether.namespace` custom-section pins).
# Native-target stubs in `wasm::raw` panic if invoked, so the crate
# compiles for `cargo test --workspace` on the host without dragging
# the wasm FFI into the linker.
[dependencies]
aether-data = { path = "../aether-data", features = ["derive"] }
# ADR-0030 Phase 2: `InitCtx::subscribe_input` self-addresses
# `aether.input.subscribe` for every `K::IS_INPUT` handler kind.
# The wasm-shim helpers in `wasm::{io, net, log}` (folded in by issue
# 552 stage 0) also build `aether.fs.*` / `aether.net.*` / `aether.log.*`
# request kinds — that whole vocabulary lives in `aether-kinds`.
aether-kinds = { path = "../aether-kinds" }
bytemuck = { workspace = true, default-features = false }
# Decoding typed payloads (e.g. `PriorState::as_kind`,
# `Mail::decode_kind`) is serde-driven via `aether_data::wire`. The crate
# stays `no_std`-friendly with `default-features = false`.
serde = { workspace = true, default-features = false, features = ["alloc"] }
# ADR-0060: the wasm shim installs a `tracing::Subscriber`
# (`MailSubscriber`) at component boot that turns `tracing::warn!` /
# `error!` / `info!` inside the wasm sandbox into `aether.log` mail.
# The facade itself is `no_std`-friendly with `default-features = false`;
# we don't pull `tracing-subscriber`.
tracing = { workspace = true, default-features = false }

[dev-dependencies]
# Examples migrate from kind-typed `Mailbox` resolutions to actor-
# typed `ctx.actor::<R>()` calls (issue 575) — needs the cap markers
# in scope. Pulls `native` so caps' `mod native` blocks compile (they
# import `aether_substrate` types and are gated on the bridge's
# default `cfg(not(target_arch = "wasm32"))`, not on the `native`
# feature). `aether-substrate` deps back on `aether-actor`, but cargo
# permits dev-dep cycles for the test-target build graph.
aether-capabilities = { path = "../aether-capabilities", features = ["render"] }
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
bytemuck = { workspace = true, features = ["derive"] }
# Issue #243: `#[derive(Kind)]` test fixtures emit `inventory::submit!`
# on native targets; the macro path needs `::inventory` reachable.
# Tests run native, so an unconditional dev-dep is fine.
inventory = { workspace = true }

# ADR-0021 input subscriptions smoke. Resolves all four substrate input
# kinds and broadcasts a `demo.input_observed` per event so
# `receive_mail` shows the dispatch landing.
[[example]]
name = "input_logger"
crate-type = ["cdylib"]

# First end-to-end component (formerly `aether-hello-component`):
# emits a fixed world-space triangle to the render sink each tick and
# echoes `aether.ping` back as `aether.pong`. Doubles as a minimal
# `#[actor]` reference and the canary referenced from
# ADR-0012/0013/0014/0033.
[[example]]
name = "hello"
crate-type = ["cdylib"]

[lints]
workspace = true
