[package]
name = "aether-camera-component"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
aether-component = { path = "../aether-component" }
aether-kinds = { path = "../aether-kinds" }
aether-camera = { path = "../aether-camera" }
aether-math = { path = "../aether-math" }
# Substrate-side `aether.sink.log` (ADR-0060) for warn-log on rejected
# mail (unknown camera, mode mismatch, etc.). Default-features-off to
# match the rest of the SDK pattern.
tracing = { version = "0.1", default-features = false }
