[package]
name = "aether-camera"
version.workspace = true
edition.workspace = true

# Issue 552 stage 1.5: consolidated dual-output crate. Trunk types
# (kind structs, parameter shapes) live at the crate root for
# consumers that need to *talk to* a camera; the runtime
# `CameraComponent` lives in the `runtime` module and `export!()`
# emits the cdylib FFI exports under wasm32. Host builds compile the
# runtime as part of the rlib (FFI exports inert) so integration
# tests can link the same artifact.
#
# Pre-stage-1.5 split: this was the trunk rlib only and a sibling
# `aether-camera-component` held the cdylib. ADR-0066's two-crate
# convention is superseded by ADR-0075 §Stage-1.5 — the trunk and
# the runtime cohabit one crate.

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Stage 1.5 footgun mitigation: the `runtime` feature pulls in the
# `runtime` module that calls `aether_actor::export!()`. The macro
# emits `#[unsafe(no_mangle)] pub unsafe extern "C" fn init` (and
# siblings `receive_p32` / `on_drop` / etc.) into the rlib output
# unconditionally — wasm-lld then forces these symbols into any
# cdylib that transitively links this rlib, colliding with that
# cdylib's own `export!()`. Trunk-type consumers (sokoban) opt out
# via `default-features = false` so their wasm builds see only the
# kind types and no FFI exports. The feature is on by default so a
# bare `cargo build -p aether-camera --target wasm32-unknown-unknown`
# still produces the full component artifact.
default = ["runtime"]
runtime = []

[dependencies]
aether-actor = { path = "../aether-actor" }
aether-capabilities = { path = "../aether-capabilities", default-features = false, features = ["render"] }
aether-data = { path = "../aether-data", features = ["derive"] }
aether-kinds = { path = "../aether-kinds" }
aether-math = { path = "../aether-math" }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
# Substrate-side `aether.log` (ADR-0060) for warn-log on rejected
# mail (unknown camera, mode mismatch, etc.). Default-features-off to
# match the rest of the SDK pattern.
tracing = { version = "0.1", default-features = false }

# Issue #243: every crate that derives `Kind` needs `inventory` reachable
# on native builds so the `aether.kinds` substrate descriptor list picks
# up its types. Wasm guests skip the submission via the derive's
# `cfg(not(target_arch = "wasm32"))` gate.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
inventory = "0.3"

# Integration tests boot a `TestBench`, load this crate's own wasm
# artifact, and assert mail-flow + render properties via `aether-scenario`.
# Tests run host-side; the wasm is built separately for `wasm32-unknown-unknown`
# and discovered at runtime under `target/wasm32-unknown-unknown/{debug,release}/`.
[dev-dependencies]
aether-scenario = { path = "../aether-scenario" }
aether-substrate-bundle = { path = "../aether-substrate-bundle" }
serde_yml = "0.0.12"
